# docker-workshop

./: README.md
0-setup/: README.md
1-first-container/: README.md  index.html
2-create-your-own-image/: README.md
2-create-your-own-image/webapp/: Dockerfile  pyproject.toml  requirements.txt
2-create-your-own-image/webapp/app/: main.py
3-on-your-own/: README.md
3-on-your-own/solutions/: Dockerfile.api  Dockerfile.client  docker-compose-alt.yml  docker-compose.yml
