[tool.poetry]
name = "fastapi-poc"
version = "0.1.0"
description = ""
authors = ["Mallear <maxime.sibellas@agorapulse.com>"]
readme = "README.md"
packages = [{include = "fastapi_poc"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
